@@ -2,6 +2,7 @@
  * New icon type: Combat Event. Displays information about combat events according to filters that you can set. Full support for events, including text output.
  * Rewrote the entire animation system to allow meta icons to inherit icon animations.
  * Text outputs now substitute a hyperlink for '%s' when appropriate.
+ * You can now leave the unit cooldown icon's "Unit(s) to watch" field blank to track all known units.
  * Bug Fixes:
  ** (r384) Weapon enchant should now be properly detected in zhCH clients
  ** (r384) The weapon enchant suggestion list should now properly display shaman enchants in zhTW clients
